package org.example.PolimorfismoEmpresa;

public class Disenyador extends Empleado{
    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
