
@startuml
package "org.example.PolimorfismoEmpresa" {

    class Empleado {
        + realizarTarea() : void
    }

    class Desarrollador {
        + realizarTarea() : void
    }

    class Disenyador {
        + realizarTarea() : void
    }

    class Gerente {
        + realizarTarea() : void
    }

    Empleado <|-- Desarrollador
    Empleado <|-- Disenyador
    Empleado <|-- Gerente
}

@enduml
